[tool.poetry]
name = "shastra"
version = "0.1.0"
description = "SHASTRA - SHarma's ASTRo Archive"
authors = ["Anubhav Sharma <anubhavprasadsharma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"                               
astropy = "^5.2.2"      
numpy  = "^1.24.4"   
pandas = "^2.0.3"        
scipy = "^1.9.0"               
sdss-access ="^3.0.0"               
sdss-marvin ="^2.8.0"                                      
matplotlib ="^3.1.2"       
notebook ="^6.4.12"         

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"